--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_A.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexShakeA.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
-    <Compile Include="Assets\Scripts\SolarSystem\PlanetGen.cs" />
+    <Compile Include="Assets\Scripts\SolarSystem\CelestialGen.cs" />
     <Compile Include="Assets\Scripts\Star\StarFlux.cs" />
     <Compile Include="Assets\Scripts\SolarSystem\HabitableZoneDisplay.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MenuButton.cs" />
@@ -120,7 +120,9 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\Scripts\SolarSystem\SystemStarData.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
-    <Compile Include="Assets\Scripts\SolarSystem\SystemObjectSelection.cs" />
+    <Compile Include="Assets\Scripts\SolarSystem\GameSpeedController.cs" />
+    <Compile Include="Assets\Scripts\SolarSystem\MoonController.cs" />
+    <Compile Include="Assets\Scripts\SolarSystem\ExpandingButton.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
